; ModuleID = '/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_test_revwalk_basic__sorting_modes.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_test_revwalk_basic__sorting_modes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@commit_head = common dso_local global i32 0, align 4
@_walk = common dso_local global i32 0, align 4
@GIT_SORT_TIME = common dso_local global i32 0, align 4
@commit_sorting_time = common dso_local global i32 0, align 4
@GIT_SORT_TOPOLOGICAL = common dso_local global i32 0, align 4
@commit_sorting_topo = common dso_local global i32 0, align 4
@GIT_SORT_REVERSE = common dso_local global i32 0, align 4
@commit_sorting_time_reverse = common dso_local global i32 0, align 4
@commit_sorting_topo_reverse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_revwalk_basic__sorting_modes() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @revwalk_basic_setup_walk(i32* null)
  %3 = load i32, i32* @commit_head, align 4
  %4 = call i32 @git_oid_fromstr(i32* %1, i32 %3)
  %5 = load i32, i32* @_walk, align 4
  %6 = load i32, i32* @GIT_SORT_TIME, align 4
  %7 = load i32, i32* @commit_sorting_time, align 4
  %8 = call i32 @test_walk(i32 %5, i32* %1, i32 %6, i32 %7, i32 1)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @_walk, align 4
  %11 = load i32, i32* @GIT_SORT_TOPOLOGICAL, align 4
  %12 = load i32, i32* @commit_sorting_topo, align 4
  %13 = call i32 @test_walk(i32 %10, i32* %1, i32 %11, i32 %12, i32 2)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* @_walk, align 4
  %16 = load i32, i32* @GIT_SORT_TIME, align 4
  %17 = load i32, i32* @GIT_SORT_REVERSE, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @commit_sorting_time_reverse, align 4
  %20 = call i32 @test_walk(i32 %15, i32* %1, i32 %18, i32 %19, i32 1)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = load i32, i32* @_walk, align 4
  %23 = load i32, i32* @GIT_SORT_TOPOLOGICAL, align 4
  %24 = load i32, i32* @GIT_SORT_REVERSE, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @commit_sorting_topo_reverse, align 4
  %27 = call i32 @test_walk(i32 %22, i32* %1, i32 %25, i32 %26, i32 2)
  %28 = call i32 @cl_git_pass(i32 %27)
  ret void
}

declare dso_local i32 @revwalk_basic_setup_walk(i32*) #1

declare dso_local i32 @git_oid_fromstr(i32*, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @test_walk(i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
